Fixed bottom part of the launcher panel's title being cut off

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/launcher/launcher.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/launcher/launcher.less
@@ -133,16 +133,18 @@ body.modal-dialog {
     color: @admin-white;
     font-size: 25px;
     display: table;
-    overflow: hidden;
     table-layout: fixed;
 
     .container-title {
-      .ellipsis();
       .container-title-mixin(32px, 0);
+      overflow-y: visible;
+      overflow-x: hidden;
+      white-space: pre;
+      text-overflow: ellipsis;
+      top: 8px;
       position: relative;
       display: table-cell;
       vertical-align: bottom;
-      line-height: 25px;
       &::first-letter {
         text-transform: uppercase;
       }
